--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>1920</width>
-    <height>1080</height>
+    <height>1157</height>
    </rect>
   </property>
   <property name="sizePolicy">
@@ -510,12 +510,39 @@
    <layout class="QVBoxLayout" name="gridLayout">
     <item>
      <layout class="QHBoxLayout" name="fileLayout">
+      <property name="rightMargin">
+       <number>0</number>
+      </property>
       <item>
        <widget class="QTabWidget" name="Tabs">
+        <property name="maximumSize">
+         <size>
+          <width>16777215</width>
+          <height>880</height>
+         </size>
+        </property>
         <property name="currentIndex">
          <number>1</number>
         </property>
         <widget class="QWidget" name="Tab_1CANFrames">
+         <property name="sizePolicy">
+          <sizepolicy hsizetype="Expanding" vsizetype="Preferred">
+           <horstretch>0</horstretch>
+           <verstretch>0</verstretch>
+          </sizepolicy>
+         </property>
+         <property name="minimumSize">
+          <size>
+           <width>1520</width>
+           <height>1080</height>
+          </size>
+         </property>
+         <property name="maximumSize">
+          <size>
+           <width>1920</width>
+           <height>1080</height>
+          </size>
+         </property>
          <attribute name="title">
           <string>CAN Frames</string>
          </attribute>
@@ -525,7 +552,7 @@
             <x>5</x>
             <y>55</y>
             <width>1891</width>
-            <height>751</height>
+            <height>1080</height>
            </rect>
           </property>
           <property name="sizePolicy">
@@ -533,6 +560,18 @@
             <horstretch>0</horstretch>
             <verstretch>0</verstretch>
            </sizepolicy>
+          </property>
+          <property name="minimumSize">
+           <size>
+            <width>1520</width>
+            <height>1080</height>
+           </size>
+          </property>
+          <property name="maximumSize">
+           <size>
+            <width>1920</width>
+            <height>1080</height>
+           </size>
           </property>
           <property name="alternatingRowColors">
            <bool>true</bool>
@@ -552,7 +591,7 @@
            <bool>false</bool>
           </attribute>
           <attribute name="horizontalHeaderMinimumSectionSize">
-           <number>100</number>
+           <number>300</number>
           </attribute>
           <attribute name="horizontalHeaderDefaultSectionSize">
            <number>472</number>
@@ -692,6 +731,22 @@
            <bool>true</bool>
           </property>
          </widget>
+         <widget class="QPushButton" name="btnSideBar_2">
+          <property name="geometry">
+           <rect>
+            <x>1530</x>
+            <y>20</y>
+            <width>41</width>
+            <height>31</height>
+           </rect>
+          </property>
+          <property name="text">
+           <string>☰</string>
+          </property>
+          <property name="checkable">
+           <bool>true</bool>
+          </property>
+         </widget>
         </widget>
         <widget class="QWidget" name="Tab2CANData">
          <attribute name="title">
@@ -768,9 +823,15 @@
            <rect>
             <x>10</x>
             <y>70</y>
-            <width>1881</width>
+            <width>1581</width>
             <height>51</height>
            </rect>
+          </property>
+          <property name="maximumSize">
+           <size>
+            <width>1581</width>
+            <height>1080</height>
+           </size>
           </property>
           <property name="alternatingRowColors">
            <bool>true</bool>
@@ -796,7 +857,7 @@
            <number>100</number>
           </attribute>
           <attribute name="horizontalHeaderDefaultSectionSize">
-           <number>466</number>
+           <number>391</number>
           </attribute>
           <row/>
           <column>
@@ -905,6 +966,85 @@
            <string>No File Selected </string>
           </property>
          </widget>
+         <widget class="QPushButton" name="btnSideBar">
+          <property name="geometry">
+           <rect>
+            <x>1530</x>
+            <y>20</y>
+            <width>41</width>
+            <height>31</height>
+           </rect>
+          </property>
+          <property name="text">
+           <string>☰</string>
+          </property>
+          <property name="checkable">
+           <bool>true</bool>
+          </property>
+         </widget>
+        </widget>
+       </widget>
+      </item>
+      <item alignment="Qt::AlignmentFlag::AlignRight">
+       <widget class="QWidget" name="sideBarWidget" native="true">
+        <property name="minimumSize">
+         <size>
+          <width>300</width>
+          <height>640</height>
+         </size>
+        </property>
+        <property name="maximumSize">
+         <size>
+          <width>300</width>
+          <height>880</height>
+         </size>
+        </property>
+        <property name="layoutDirection">
+         <enum>Qt::LayoutDirection::RightToLeft</enum>
+        </property>
+        <widget class="QLabel" name="lblDBCData">
+         <property name="geometry">
+          <rect>
+           <x>100</x>
+           <y>70</y>
+           <width>70</width>
+           <height>18</height>
+          </rect>
+         </property>
+         <property name="sizePolicy">
+          <sizepolicy hsizetype="Fixed" vsizetype="Preferred">
+           <horstretch>0</horstretch>
+           <verstretch>0</verstretch>
+          </sizepolicy>
+         </property>
+         <property name="maximumSize">
+          <size>
+           <width>100</width>
+           <height>100</height>
+          </size>
+         </property>
+         <property name="text">
+          <string>DBC DATA</string>
+         </property>
+        </widget>
+        <widget class="QFrame" name="frame">
+         <property name="geometry">
+          <rect>
+           <x>-1</x>
+           <y>29</y>
+           <width>301</width>
+           <height>851</height>
+          </rect>
+         </property>
+         <property name="frameShape">
+          <enum>QFrame::Shape::Panel</enum>
+         </property>
+         <property name="frameShadow">
+          <enum>QFrame::Shadow::Raised</enum>
+         </property>
+         <property name="lineWidth">
+          <number>4</number>
+         </property>
         </widget>
        </widget>
       </item>
@@ -912,6 +1052,9 @@
     </item>
     <item>
      <layout class="QHBoxLayout" name="filterLayout">
+      <property name="bottomMargin">
+       <number>0</number>
+      </property>
       <item>
        <widget class="QLabel" name="lblFilter">
         <property name="text">
@@ -941,5 +1084,70 @@
   </action>
  </widget>
  <resources/>
- <connections/>
+ <connections>
+  <connection>
+   <sender>btnSideBar</sender>
+   <signal>toggled(bool)</signal>
+   <receiver>sideBarWidget</receiver>
+   <slot>setVisible(bool)</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>1566</x>
+     <y>77</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>1730</x>
+     <y>231</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>btnSideBar</sender>
+   <signal>toggled(bool)</signal>
+   <receiver>sideBarWidget</receiver>
+   <slot>setHidden(bool)</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>1556</x>
+     <y>76</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>1728</x>
+     <y>354</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>btnSideBar_2</sender>
+   <signal>toggled(bool)</signal>
+   <receiver>sideBarWidget</receiver>
+   <slot>setVisible(bool)</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>1568</x>
+     <y>77</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>1667</x>
+     <y>352</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>btnSideBar_2</sender>
+   <signal>toggled(bool)</signal>
+   <receiver>sideBarWidget</receiver>
+   <slot>setHidden(bool)</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>1549</x>
+     <y>77</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>1669</x>
+     <y>310</y>
+    </hint>
+   </hints>
+  </connection>
+ </connections>
 </ui>
